--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "rss-feed",
   "version": "0.1.0",
   "private": true,
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.17.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0"
+  },
   "eslintConfig": {
     "parser": "babel-eslint",
     "extends": "airbnb",
@@ -89,19 +97,11 @@
     "babel-preset-stage-0": "^6.22.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.23.1",
-    "eslint": "^3.17.0",
-    "eslint-config-airbnb": "^14.1.0",
-    "eslint-config-airbnb-base": "^11.1.1",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
     "express": "^4.13.4",
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.5",
     "image-webpack-loader": "^3.2.0",
     "json-loader": "^0.5.4",
-    "raven-js": "^2.3.0",
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.4.2",
@@ -113,12 +113,9 @@
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.2.3",
     "redux": "^3.6.0",
-    "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.5.2",
     "style-loader": "^0.13.1",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^2.0.0",
     "url-loader": "^0.5.8",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
